
- #9527: stop including configuration when running 'clean' rules
  to avoid C dependency recomputation.
  (Gabriel Scherer, review by David Allsopp)

- #9804: Build C stubs of libraries in otherlibs/ with debug info.
  (Stephen Dolan, review by Sébastien Hinderer and David Allsopp)

- #9824, #9837: Honour the CFLAGS and CPPFLAGS variables.
  (Sébastien Hinderer, review by David Allsopp)

- #9895, #9523: Avoid conflict with C++20 by not installing VERSION to the OCaml
  Standard Library directory.
  (Bernhard Schommer, review by David Allsopp)

### Bug fixes:

- #7538, #9669: Check for misplaced attributes on module aliases
  (Leo White, report by Thomas Leonard, review by Florian Angeletti)

- #7813, #9955: make sure the major GC cycle doesn't get stuck in Idle state
  (Damien Doligez, report by Anders Fugmann, review by Jacques-Henri Jourdan)

- #7902, #9556: Type-checker infers recursive type, even though -rectypes is
  off.
  (Jacques Garrigue, report by Francois Pottier, review by Leo White)

- #8746: Hashtbl: Restore ongoing traversal status after filter_map_inplace
  (Mehdi Bouaziz, review by Alain Frisch)

- #8747, #9709: incorrect principality warning on functional updates of records
  (Jacques Garrigue, report and review by Thomas Refis)

- #9421, #9427: fix printing of (::) in ocamldoc
  (Florian Angeletti, report by Yawar Amin, review by Damien Doligez)

- #9440: for a type extension constructor with parameterised arguments,
  REPL displayed <poly> for each as opposed to the concrete values used.
  (Christian Quinn, review by Gabriel Scherer)

- #9433: Fix package constraints for module aliases
  (Leo White, review by Jacques Garrigue)

- #9469: Better backtraces for lazy values
  (Leo White, review by Nicolás Ojeda Bär)

- #9521, #9522: correctly fail when comparing functions
  with Closure and Infix tags.
  (Gabriel Scherer and Jeremy Yallop and Xavier Leroy,
   report by Twitter user @st_toHKR through Jun Furuse)
